<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feedback_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_feedback_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/feedback_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_ui_ux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_ui_ux"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_performance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_performance"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_features"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_ads"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_other"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_feedback"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/feedback_details_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@android:string/cancel"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/Red"
                android:text="@string/send_feedback"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView> 